# EchoAgent

./: .env.example  .gitignore  README.md  pyproject.toml  readme.md
echoagent/: __init__.py
echoagent/agent/: __init__.py  agent.py  executor.py  output_handler.py  runner.py  runtime_config.py  tracker.py
echoagent/artifacts/: __init__.py  artifact_writer.py  errors.py  models.py  reporter.py  store.py  terminal_writer.py
echoagent/context/: __init__.py  context.py  conversation.py  errors.py  iteration_summarizer.py  policy.py  snapshot.py  state.py
echoagent/llm/: __init__.py  capabilities.py
echoagent/mcp/: __init__.py  manager.py
echoagent/observability/: __init__.py
echoagent/profiles/: __init__.py  base.py  (+6 more)
examples/: data_science.py  skill_smoke_test.py  web_researcher.py
frontend/: app.py  streaming_printer.py
tests/: test_artifacts_layout.py  test_artifacts_store.py  test_config_provider.py  test_context_agent_orchestrator.py  test_context_assembler.py  test_context_budgeter.py  test_context_snapshot.py  test_instruction_builder.py  test_iteration_digest_renderer.py  test_llm_capabilities.py  test_llm_provider.py  test_mcp_manager.py  test_output_handler.py  test_parsers.py  test_profile_resolver.py  test_runlog.py  test_skills_registry.py  test_skills_router.py  test_snapshot_path_standard.py  test_state_recorder.py  test_tool_executor_allowlist.py  test_tool_runtime.py  test_tracker.py  utils.py
workflows/: __init__.py  base.py  browser_mcp.py  data_scientist.py  skill_chat.py  skill_smoke_test.py  vanilla_chat.py  web_researcher.py
(+94 files in other folders)
